--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.5",
     "@playwright/test": "^1.56.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
