--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"type": "module",
 	"engines": {
-		"node": "^20.19.0 || >=22.12.0"
+		"node": ">=22.12.0",
+		"bun": ">=1.3.0"
 	},
 	"scripts": {
 		"dev": "vite",
@@ -27,6 +28,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-vue-next": "^0.553.0",
+		"osm-auth": "^3.0.0",
 		"pinia": "^3.0.3",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
