--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-vue-next": "^0.553.0",
-		"osm-auth": "^3.0.0",
+		"osm-auth": "^3.1.1",
 		"pinia": "^3.0.3",
+		"surrealdb": "^1.3.2",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
 		"vue": "^3.5.22",
