--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
 		"vue": "^3.5.22",
-		"vue-router": "^4.6.3"
+		"vue-router": "^4.6.3",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.5",
